# augmentation

./: .gitignore  1_4.txt  Cargo.toml  c4_3_11.txt  c4_cases.txt  diff.py  output.txt  run.sh  run1_4.sh  run2_7.sh  run3_11.sh  run4_15.sh  run5_19.sh  test.txt
src/: bridges.rs  comps.rs  contract.rs  credit.rs  enumerators.rs  local_merge.rs  logic.rs  main.rs  nice_path.rs  proof_logic.rs  proof_tree.rs  tactics.rs  types.rs  util.rs
src/old/: bridges.rs  comps_old.rs  large_contract.rs  utils.rs
src/old/tree/: proof.rs  utils.rs
src/path/: comps.rs  extension.rs  instance.rs  logic.rs  mod.rs  old.rs  path_definition.rs  proof.rs  pseudo_cycle.rs  test.rs  types.rs  utils.rs
src/path/enumerators/: comp_hits.rs  cycle_expand.rs  cycle_rearrangements.rs  cycles_edges.rs  edges.rs  expand.rs  expand_all.rs  iter_comp.rs  matching_edges.rs  matching_hits.rs  matching_nodes.rs  mod.rs  nice_pairs.rs  nice_paths.rs  path_nodes.rs  pseudo_cycles.rs  rearrangements.rs
src/path/tactics/: complex_merge.rs  contract.rs  cycle_merge.rs  cycle_rearrange.rs  double_cycle_merge.rs  local_merge.rs  longer_path.rs  longer_path_swap.rs  mod.rs  pendant_rewire.rs  swap_pseudo_cycle.rs
src/path/util/: contract.rs  mod.rs
src/tree/: comps.rs  local_merge.rs  mod.rs  proof.rs
src/tree/enumerators/: cases.rs  contractable_comps.rs  contractable_edges.rs  matching_edge.rs  mod.rs
test/: proof_C3.txt  proof_C4.txt  proof_C5.txt  proof_C6.txt  proof_Large.txt  proof_aided-C5.txt  wrong_proof_C3.txt  wrong_proof_C4.txt  wrong_proof_C5.txt  wrong_proof_Large.txt
(+5 files in other folders)
