[package]
name = "augmentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
petgraph = "0.6.2"
petgraph-graphml = "3.0.0"
itertools = "0.10.3"
num-rational = "0.4.1"
clap = { version = "3.2.16", features = ["derive"] }
rayon = "1.5.3"
