[package]
name = "augmentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
petgraph = "0.6.2"
petgraph-graphml = "3.0.0"
itertools = "0.10.3"
num-rational = "0.4.1"
clap = { version = "4.1.6", features = ["derive"] }
rayon = "1.5.3"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.21"
anyhow = "1.0.61"
fxhash = "0.2.1"